@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env sh
 
 # we only want to test the script, not Freeplane itself
 if ( echo "${DEBUG}" | grep -qe "script" ); then
@@ -32,14 +32,14 @@ findjava() {
 
 	JAVA_SOURCE=
 
-	if [ -n "${JAVACMD}" ] && [ -x "${JAVACMD}" ]; then
+	if [ -n "${FREEPLANE_JAVA_HOME}" ] && [ -x "${FREEPLANE_JAVA_HOME}/bin/java" ]; then
+		JAVACMD="${FREEPLANE_JAVA_HOME}/bin/java"
+		JAVA_SOURCE="\$FREEPLANE_JAVA_HOME"
+	elif [ -n "${JAVACMD}" ] && [ -x "${JAVACMD}" ]; then
 		JAVA_SOURCE="\$JAVACMD"
 	elif [ -n "${JAVA_BINDIR}" ] && [ -x "${JAVA_BINDIR}/java" ]; then
 		JAVACMD="${JAVA_BINDIR}/java"
 		JAVA_SOURCE="\$JAVA_BINDIR"
-	elif [ -n "${FREEPLANE_JAVA_HOME}" ] && [ -x "${FREEPLANE_JAVA_HOME}/bin/java" ]; then
-		JAVACMD="${FREEPLANE_JAVA_HOME}/bin/java"
-		JAVA_SOURCE="\$FREEPLANE_JAVA_HOME"
 	elif [ -n "${JAVA_HOME}" ] && [ -x "${JAVA_HOME}/bin/java" ]; then
 		JAVACMD="${JAVA_HOME}/bin/java"
 		JAVA_SOURCE="\$JAVA_HOME"
@@ -57,13 +57,13 @@ findjava() {
 		fi
 	fi
 
-	JAVA_VERSION=$(${JAVACMD} -version |& grep -E "[[:alnum:]]+ version" | awk '{print $3}' | tr -d '"')
+	JAVA_VERSION=$(${JAVACMD} -version 2>&1 | grep -E "[[:alnum:]]+ version" | awk '{print $3}' | tr -d '"')
 	JAVA_MAJOR_VERSION=$(echo $JAVA_VERSION | sed -e 's/^1\.//' | awk -F. '{print $1}')
-	if [ $JAVA_MAJOR_VERSION -lt 8 ] || [ $JAVA_MAJOR_VERSION -gt 22 ] || [ $JAVA_MAJOR_VERSION -eq 10 ]; then
+	if [ $JAVA_MAJOR_VERSION -lt 8 ] || [ $JAVA_MAJOR_VERSION -gt 23 ] || [ $JAVA_MAJOR_VERSION -eq 10 ]; then
 		if [ -z "${FREEPLANE_USE_UNSUPPORTED_JAVA_VERSION}" ]; then
 			_error "Found $JAVACMD in $JAVA_SOURCE."
 			_error "It has version $JAVA_VERSION"
-			_error "Currently, freeplane requires java version 8 or from 11 to 22"
+			_error "Currently, freeplane requires java version 8 or from 11 to 23"
 			_error ""
 			_error "Select a supported java version"
 			_error "by setting FREEPLANE_JAVA_HOME to a valid java location"
@@ -152,7 +152,7 @@ else
 	freefile="$0"
 fi
 
-if [ "`echo $OSTYPE | cut -b1-6`" == "darwin" ]; then
+if [ "`echo $OSTYPE | cut -b1-6`" = "darwin" ]; then
 	xdockname='-Xdock:name=Freeplane'
 else
 	xdockname=""
@@ -177,6 +177,8 @@ if [ -z "${freedir}" ]; then
 fi
 
 #--------- Call (at last) Freeplane -------------------------------------
+JAVA_OPTS="-XX:+IgnoreUnrecognizedVMOptions $JAVA_OPTS"
+
 if [ "${JAVA_TYPE}" != "sun" ]; then
   # OpenJDK(7) fixes (don't use OpenJDK6!!)
   JAVA_OPTS="-Dgnu.java.awt.peer.gtk.Graphics=Graphics2D $JAVA_OPTS"
@@ -193,13 +195,20 @@ fi
 if [ $JAVA_MAJOR_VERSION -ge 11 ]; then
 	JAVA_OPTS="--add-exports java.desktop/sun.awt=ALL-UNNAMED $JAVA_OPTS"
 	JAVA_OPTS="--add-exports java.desktop/sun.swing=ALL-UNNAMED $JAVA_OPTS"
-	JAVA_OPTS="--add-exports java.desktop/sun.swing.shell=ALL-UNNAMED $JAVA_OPTS"
+	JAVA_OPTS="--add-exports java.desktop/sun.awt.shell=ALL-UNNAMED $JAVA_OPTS"
 	JAVA_OPTS="--add-opens java.desktop/sun.awt.X11=ALL-UNNAMED $JAVA_OPTS"
 	JAVA_OPTS="--add-opens java.desktop/javax.swing.text.html=ALL-UNNAMED $JAVA_OPTS"
+	JAVA_OPTS="--add-opens java.desktop/com.apple.eawt=ALL-UNNAMED $JAVA_OPTS"
 	JAVA_OPTS="-Dorg.osgi.framework.system.capabilities=osgi.ee;osgi.ee=\"JavaSE\";version:List=\"1.8,15\" $JAVA_OPTS"
 fi
 if [ $JAVA_MAJOR_VERSION -ge 18 ]; then
 	JAVA_OPTS="-Djava.security.manager=allow $JAVA_OPTS"
+fi
+
+
+if [ "$(uname)" = "Darwin" ]; then
+	JAVA_OPTS="-Xdock:icon=${freedir}/freeplane256.png $JAVA_OPTS"
+	JAVA_OPTS="-Xdock:name=Freeplane $JAVA_OPTS"
 fi
 
 # enable this in order to turn off the splash screen:
